Revert "fixed some overflow?"
This reverts commit d33d0d9d52e9ba6a50c66b7a9fb32124baf9f846.

--- a/home.css
+++ b/home.css
@@ -58,7 +58,6 @@ span::selection {
     width: 99%;
     flex-direction: column;
     justify-content: center;
-    overflow-x:hidden;
 }
 
 .block > .topbar {
@@ -130,7 +129,6 @@ span::selection {
 }
 
 .topbar > .navbar {
-    overflow:hidden;
     /* outline: 2px solid #3E3C4E; */
     justify-self: flex-end !important;
     color: white;
@@ -168,7 +166,6 @@ span::selection {
 }
 
 .slideout > .slideoutInfoBlock {
-    position: static;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -178,7 +175,6 @@ span::selection {
     pointer-events: all;
     width: 100%;
     height: 100%;
-    
 }
 
 .slideoutInfoBlock:hover {
@@ -196,8 +192,9 @@ span::selection {
     font-family: 'DM Serif Display', serif;
     display: flex;
     margin-left: auto !important;
-    padding-bottom: 6px;
-    padding-top: 6px;
+    height: 5vh;
+    padding-bottom: 8px;
+    padding-top: 8px;
     justify-content: center;
     align-items: center;
     background-color: #d3564d;
